# RecSysTRX

./: .gitignore  LICENSE  app.py  main.py  pyproject.toml  requirements.txt
notebooks/: data_loading.ipynb  model.ipynb  model_building.ipynb
src/: config.py
src/data_loader/: __init__.py  base_loader.py  csv_data_loader.py
src/data_preprocessing/: __init__.py  base.py  rating_preprocessor.py
src/models/: __init__.py  base.py  user_user.py
src/utils/: __init__.py  utility.py
tests/: test_user_user.py
